--- a/index.html
+++ b/index.html
@@ -186,12 +186,12 @@
                     <div class="social-icons">
                         <a href="#"><i class="fab fa-twitter"></i></a>
                         <a href="#"><i class="fab fa-linkedin"></i></a>
-                        <a href="https://github.com/univers-artifficial-intelligence/Project-AGI-ASI-AI-google-gemini-2.0-flash.git"><i class="fab fa-github"></i></a>
+                        <a href="https://github.com/future-tech-artifficial-intelligence/AGI-concept-api-google-gemini-2.0-flash-french-version.git"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Gemini 2.0 Flash AGI. Tous droits réservés.</p>
+                <p>&copy; </p>
             </div>
         </div>
     </footer>
